# kvm-dmesg

./: .gitignore  Makefile  README.md  client.c  client.h  defs.h  global_data.c  kernel.c  libvirt_client.c  log.c  log.h  main.c  mem.c  mem.h  meson.build  parse_hmp.c  parse_hmp.h  printk.c  printk.h  qmp_client.c  symbols.c  version.c  version.h  xutil.c  xutil.h
scripts/: create-release.sh
tests/: base.py  base.sh
